# epos

./: .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml  library.properties
data/: maxon_EPOS2.eds  maxon_EPOS2_od.csv  od.csv  raft.csv
examples/basic/: basic.ino
examples/idf/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
examples/idf/main/: CMakeLists.txt  idf_component.yml  main.c
include/: canopen_types.h  epos.h  moving_average.h
py/: eds_to_od.py  extract.py
src/: EposCAN.cpp  EposCAN.hh  canopen.c  canopen.h  canopen_client.c  canopen_client.h  canopen_console.c  canopen_console.h  canopen_console_types.h  canopen_server.c  canopen_server.h  canopen_types.h  client_od.h  epos.c  epos.h  epos_console.c  epos_console.h  epos_motor.c  epos_motor.h  epos_motor_console.h  epos_types.h  maxon_EPOS2_od.h  motor.c  motor.h  motor_console.c  motor_console.h  moving_average.c  moving_average.h  object_dictionary.h  replace.py
